# aoc

./: .gitignore  LICENSE  README.md
aoc_2022/: Cargo.toml
aoc_2022/benches/: day_1_benchmark.rs
aoc_2022/src/: day_1.rs  day_9.rs  lib.rs  main.rs  tools.rs
aoc_2022_day_1/: Cargo.toml
aoc_2022_day_1/src/: day_1.rs  lib.rs  main.rs
aoc_2022_day_2/: day_2.sh
aoc_2022_day_3/: day_3.rb
aoc_2022_day_4/: day_4.r
aoc_2022_day_5/: day_5.py
aoc_2022_day_6/: day_6.alg
aoc_2022_day_7/: day_7.c
aoc_2022_day_8/: go.mod  main.go
aoc_2023_day_1/: Cargo.toml
aoc_2023_day_1/src/: day_1.rs
aoc_2023_day_14/src/: day_14.rs
aoc_2023_day_15/src/: day_15.rs
aoc_2023_day_2/: Cargo.toml
aoc_2023_day_2/src/: day_2.rs
aoc_2023_day_4/src/: day_4.rs  main.rs
aoc_2023_day_5/: Cargo.toml
aoc_2023_day_5/src/: day_5.rs
aoc_2023_day_6/src/: day_6.rs
aoc_2023_day_6/zig/: build.zig
aoc_2023_day_6/zig/src/: day_6.zig
aoc_2023_day_7/src/: day_7.rs
