[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "day_1_benchmark"
harness = false

[dependencies]
# rayon = "1.5.3"
# ndarray = "0.15.6"
